--- a/src/main/resources/templates/backUsers.html
+++ b/src/main/resources/templates/backUsers.html
@@ -24,326 +24,13 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <!-- 로고 -->
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png"/>
 
+    <link rel="stylesheet" type="text/css"  href="/css/backUsers.css">
+
     <style>
-
-        /* 상단바 css 추가 */
-        @font-face {
-            font-family: 'GangwonState';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        * {
-            font-family: 'GangwonState', cursive;
-        }
-
-        html, body {
-            /*height: 100%;*/
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            color: #101014;
-            background-color: #f5f5fa;
-            display: flex;
-            flex-direction: column;
-            justify-content: center; /* 가로 가운데 정렬 추가 */
-            align-items: center; /* 세로 가운데 정렬 추가 */
-        }
-
-        /* 상단 메뉴 */
-        .top {
-            color: white;
-            text-align: center;
-            padding: 10px;
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-        }
-
-        button {
-            background-color: transparent;
-            border: none;
-        }
-
-        .right {
-            height: 100%;
-            width: 35%;
-            padding-left: 30px;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-        }
-
-        .middle {
-            height: 100%;
-            width: 30%;
-            font-size: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #000;
-        }
-
-        .middle img {
-            margin-right: 5px;
-        }
-
-        .left {
-            height: 100%;
-            width: 35%;
-            padding-right: 30px;
-            display: flex;
-            flex-direction: row;
-            justify-content: end;
-            align-items: center;
-        }
-
-
-        /* 알림 */
-        .notification-icon {
-            font-size: 30px;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-
-        .notification-icon div {
-            position: relative;
-        }
-
-        @keyframes shake {
-            0%, 100% {
-                transform: translateX(0);
-            }
-            10%, 30%, 50%, 70%, 90% {
-                transform: translateX(-3px);
-            }
-            20%, 40%, 60%, 80% {
-                transform: translateX(3px);
-            }
-        }
-
-        .new-notification {
-            color: red;
-            animation: shake 1.5s infinite; /* 흔들기 애니메이션 적용 */
-        }
-
-        .nobadge {
-            background-color: red;
-            color: white;
-            border-radius: 50%;
-            padding: 4px 8px;
-            font-size: 12px;
-            position: absolute;
-            top: 0;
-            right: 0;
-        }
-
-        .notification-list {
-            position: absolute;
-            top: 100px; /* Adjust the top position to your preference */
-            right: 70px;
-            width: 295px;
-            background-color: white;
-            border: 1px solid #ddd;
-            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-            max-height: 700px;
-            overflow-y: auto;
-            display: none;
-            z-index: 10;
-            margin-top: 45px; /* 헤더의 높이만큼 여백 추가 */
-        }
-
-        .notification-list-header {
-            background-color: #ccc;
-            padding: 10px;
-            text-align: center;
-            font-weight: bold;
-            position: fixed;
-            top: 100px;
-            width: 13%; /* 가로 너비를 꽉 채우도록 설정 */
-            z-index: 9998; /* 헤더 위에 배치 */
-        }
-
-        .notification-list-item {
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-            cursor: pointer;
-            background-color: white;
-        }
-
-        .notification-list-item.read {
-            background-color: #f0f0f0;
-        }
-        .bottom {
-            width: 100%;
-            margin: 10px;
-            display: flex;
-            flex-direction: row;
-        }
-        /*하단 게시판*/
-        .list-group-item {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-        }
-
-        .list-group-item span:nth-child(1) {
-            width: 50%;
-        }
-        .list-group-item span:nth-child(2) {
-            width: 35%;
-        }
-
-        .badge-bg-primary-rounded-pill {
-            width: 15%;
-        }
-
-        .bg-primary {
-            background-color: #ccc !important;
-        }
-        a {
-            text-decoration: none;
-            color: inherit;
-        }
-        a:hover {
-            text-decoration: none;
-            color: inherit;
-        }
-        .category-title {
-            font-size: 18px;
-        }
-
-        .sidemenu{
-            display: flex;
-            flex-direction: column;
-        }
-        .sidemenu div {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
-
-        .list-group-item {
-            background-color: transparent;
-            cursor: pointer;
-        }
-
-        .offcanvas{
-            background-color: #f5f5fa;
-        }
-
-        .mini-list{
-            font-size: 14px;
-            color: #a9a9a9;
-        }
-
-
-        /* 아래는 건욱님 css 코드 */
-        .header {
-            background-color: #555;
-            color: white;
-            text-align: center;
-            padding: 10px;
-        }
-
-        .feature-container {
-            width: 16%;
-            display: flex;
-            flex-direction: column;
-            padding: 20px;
-        }
-
-        .feature {
-            background-color: white;
-            border: 1px solid #ddd;
-            padding: 1px 10px;
-            margin: 0.8em;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            font-size: 15px;
-            text-align: center;
-        }
-
-        /* 새로 추가한 스타일 */
-        .user-info-container {
-            box-sizing: unset;
-            display: flex;
-            flex-direction: column; /* 세로 정렬로 변경 */
-            justify-content: flex-start;
-            align-items: center; /* 가로 정렬을 중앙에서 시작하도록 변경 */
-            width: 50%;
-            height: auto; /* 건욱님 코드는 80vh*/
-            background-color: white;
-            border: 1px solid #ddd;
-            margin-left: 10%;
-            padding: 20px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            /*      position: fixed;
-                  top: 55%; !* 55%에서 50%로 변경 *!
-                  left: 50%;
-                  transform: translate(-50%, -50%);*/
-        }
-
-        .user-info {
-            padding: 10px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-            display: flex;
-            align-items: center;
-            margin: 5px 0;
-            width: 90%;
-        }
-
-        /* 수정 및 삭제 버튼 스타일 */
-        .edit-delete-buttons{
-            margin-left: auto; /* 우측으로 정렬 */
-            margin-top: auto;
-            display: flex;
-            flex-direction: row;
-        }
-
-        .edit-delete-buttons button {
-            margin-left: 5px;
-            margin-top: 5px;
-            padding: 5px 15px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        .user-checkbox {
-            margin-right: 10px;
-        }
-
-        .user-info-list {
-            display: flex;
-            flex-direction: column; /* 항목을 수직으로 쌓습니다 */
-            max-height: 90vh; /* 컨텐츠의 최대 높이 설정 */
-            overflow-y: hidden; /* 컨텐츠가 넘칠 때 수직 스크롤바를 추가합니다 */
-            gap: 10px;
-            width: 90%; /* 건욱님 코드는 80%*/
-            justify-content: flex-start; /* 요소들을 왼쪽 정렬로 유지 */
-            align-items: flex-start; /* 요소들을 위쪽 정렬로 유지 */
-        }
-
-        .mark-all-read-button {
-            position: absolute;
-            top: 10px; /* 버튼 위치 조정 */
-            right: 10px; /* 버튼 위치 조정 */
-            padding: 1px 4px;
-            font-size: 12px;
-            z-index: 9999; /* 다른 요소보다 앞에 표시되도록 설정 */
-        }
 
     </style>
 </head>
@@ -545,17 +232,15 @@
             // "전체 읽음" 버튼에 이벤트 리스너 연결
             const button = document.getElementById('markAllReadButton');
             button.addEventListener('click', function() {
-                const confirmResult = confirm('알림 전체 읽음처리 하시겠습니까?');
-                if (confirmResult) {
-                    // 확인을 선택한 경우 서버에 요청 보내기
-                    markAllNotificationsAsRead();
-                    // alert('알림이 전체 읽음 처리되었습니다.');
-                    window.location.href = window.location.href;
-                } else {
-                    // 취소를 선택한 경우
-                    // 아무 작업도 하지 않음
-                }
-
+                Swal.fire({
+                    icon: "waning",
+                    title: "알림 전체 읽음처리 하시겠습니까?"
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        markAllNotificationsAsRead();
+                        window.location.reload();
+                    }
+                })
             });
 
 
@@ -678,11 +363,17 @@
             contentType: "application/json",
             success: function (data) {
                 console.log(data);
-                alert("로그인 연장 성공");
+                Toast.fire({
+                    icon: 'success',
+                    title: "로그인 연장 성공",
+                })
             },
             error: function (data) {
                 console.log(data);
-                alert("로그인 연장 실패 \n 재로그인 부탁드립니다.");
+                Toast.fire({
+                    icon: 'error',
+                    title: "로그인 연장 실패. 재로그인 부탁드립니다.",
+                })
                 redirectToLoginPage();
             }
         });
@@ -709,6 +400,18 @@
 
     }
 
+    const Toast = Swal.mixin({
+        toast: true,
+        position: 'center-center',
+        showConfirmButton: false,
+        timer: 1000,
+        timerProgressBar: true,
+        didOpen: (toast) => {
+            toast.addEventListener('mouseenter', Swal.stopTimer)
+            toast.addEventListener('mouseleave', Swal.resumeTimer)
+        }
+    })
+
     function logout() { // 로그아웃
         $.ajax({
             type: "DELETE",
@@ -716,12 +419,20 @@
             contentType: "application/json",
             success: function (data) {
                 removeToken();
-                alert("로그아웃 성공");
-                window.location.href='/main';
+                Toast.fire({
+                    icon: 'success',
+                    title: "로그아웃 성공",
+                }).then(function () {
+                    window.location.href = "/main";
+                })
             },
             error: function () {
-                alert("로그아웃 실패");
-                window.location.reload();
+                Toast.fire({
+                    icon: 'error',
+                    title: "로그아웃 실패",
+                }).then(function () {
+                    window.location.reload();
+                })
             }
         });
     }
@@ -972,18 +683,83 @@
             fetch('/api/users/profile')
                 .then(response => response.json())
                 .then(profileData => {
-                    const popupContent = `
-                 <h3>프로필 수정</h3>
-                <label for="passwordCheckToggle">비밀번호 변경:</label>
-                <input type="checkbox" id="passwordCheckToggle"><br>
-                <label for="newPassword">비밀번호:</label>
-                <input type="password" id="newPassword" name="newPassword" disabled required><br>
-                <label for="newNickname">닉네임:</label>
-                <input type="text" id="newNickname" name="newNickname" value="${profileData.nickname}" required><br>
-                <label for="newIntroduction">자기소개:</label>
-                <textarea id="newIntroduction" name="newIntroduction" required>${profileData.introduction}</textarea><br>
-                <button id="updateProfileButton">수정</button>
-                <button id="cancelProfileButton">취소</button>
+                    const popupContent = `<div class="popup">
+                    <style>
+                        @font-face {
+                            font-family: 'GangwonState';
+                            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
+                            font-weight: normal;
+                            font-style: normal;
+                        }
+
+                        * {
+                            font-family: 'GangwonState', cursive;
+                        }
+
+                         .popup {
+                            background-color: #fff; /* 팝업 배경색 */
+                            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* 그림자 효과 */
+                            padding: 20px; /* 안쪽 여백 */
+                            border-radius: 10px; /* 둥근 테두리 */
+                            width: 300px; /* 팝업 창 너비 */
+                            position: absolute; /* 절대 위치 지정 */
+                            top: 50%; /* 화면 상단에서 절반 떨어진 위치 */
+                            left: 50%; /* 화면 왼쪽에서 절반 떨어진 위치 */
+                            transform: translate(-50%, -50%); /* 중앙 정렬 */
+                        }
+
+                        .popup h3 {
+                            font-size: 24px; /* 제목 글꼴 크기 */
+                            margin-bottom: 20px; /* 아래 여백 */
+                        }
+
+                        .popup label {
+                            display: block; /* 라벨을 블록 요소로 변경하여 세로로 정렬 */
+                            margin-bottom: 5px; /* 아래 여백 */
+                            font-weight: bold; /* 굵은 글꼴 */
+                        }
+
+                        .popup input[type="text"],
+                        .popup input[type="password"],
+                        .popup textarea {
+                            width: 100%; /* 입력 요소 너비 100%로 확장 */
+                            padding: 5px; /* 안쪽 여백 */
+                            margin-bottom: 10px; /* 아래 여백 */
+                            border: 1px solid #ccc; /* 테두리 스타일 */
+                            border-radius: 5px; /* 둥근 테두리 */
+                        }
+
+                        .popup button {
+                            background-color: #007BFF; /* 버튼 배경색 */
+                            color: #fff; /* 버튼 텍스트 색상 */
+                            border: none; /* 테두리 제거 */
+                            padding: 10px 20px; /* 안쪽 여백 */
+                            border-radius: 5px; /* 둥근 테두리 */
+                            cursor: pointer; /* 포인터 커서 설정 */
+                        }
+
+                        .popup button#updateProfileButton {
+                            background-color: #28a745; /* 수정 버튼의 배경색 변경 */
+                            margin-right: 10px; /* 수정 버튼 오른쪽 여백 */
+                        }
+
+                        .popup button#cancelProfileButton {
+                            background-color: #dc3545; /* 취소 버튼의 배경색 변경 */
+                        }
+
+                    </style>
+                    <h3>프로필 수정</h3>
+                    <label for="passwordCheckToggle">비밀번호 변경:</label>
+                    <input type="checkbox" id="passwordCheckToggle"><br>
+                    <label for="newPassword">비밀번호:</label>
+                    <input type="password" id="newPassword" name="newPassword" disabled required><br>
+                    <label for="newNickname">닉네임:</label>
+                    <input type="text" id="newNickname" name="newNickname" value="${profileData.nickname}" required><br>
+                    <label for="newIntroduction">자기소개:</label>
+                    <textarea id="newIntroduction" name="newIntroduction" required>${profileData.introduction}</textarea><br>
+                    <button id="updateProfileButton">수정</button>
+                    <button id="cancelProfileButton">취소</button>
+                </div>
             `;
 
                     popupWindow.document.body.innerHTML = popupContent;
