--- a/src/main/resources/templates/chatRooms.html
+++ b/src/main/resources/templates/chatRooms.html
@@ -14,306 +14,16 @@
           src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js">
   </script>
 
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
 
   <!-- 로고 -->
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" />
 
+  <link rel="stylesheet" type="text/css"  href="/css/chatRoom.css">
+
   <style>
-    @font-face {
-      font-family: 'GangwonState';
-      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
-      font-weight: normal;
-      font-style: normal;
-    }
-
-    * {
-      font-family: 'GangwonState', cursive;
-    }
-
-    html, body {
-      height: 100%;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-      color: #101014;
-      background-color: #f5f5fa;
-      display: flex;
-      flex-direction: column;
-      justify-content: center; /* 가로 가운데 정렬 추가 */
-      align-items: center; /* 세로 가운데 정렬 추가 */
-    }
-
-    /* 상단 메뉴 */
-    .top {
-      height: 15vh;
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-    }
-
-    button {
-      background-color: transparent;
-      border: none;
-    }
-
-    .right {
-      height: 100%;
-      width: 35%;
-      padding-left: 30px;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
-
-    .middle {
-      height: 100%;
-      width: 30%;
-      font-size: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .middle img {
-      margin-right: 5px;
-    }
-
-    .left {
-      height: 100%;
-      width: 35%;
-      padding-right: 30px;
-      display: flex;
-      flex-direction: row;
-      justify-content: end;
-      align-items: center;
-    }
-
-
-
-
-    /* 알림 */
-    .notification-icon {
-      font-size: 30px;
-      cursor: pointer;
-      margin-right: 10px;
-    }
-
-    .notification-icon div {
-      position: relative;
-    }
-
-    @keyframes shake {
-      0%, 100% {
-        transform: translateX(0);
-      }
-      10%, 30%, 50%, 70%, 90% {
-        transform: translateX(-3px);
-      }
-      20%, 40%, 60%, 80% {
-        transform: translateX(3px);
-      }
-    }
-
-    .new-notification {
-      color: red;
-      animation: shake 1.5s infinite; /* 흔들기 애니메이션 적용 */
-    }
-
-    .nobadge {
-      background-color: red;
-      color: white;
-      border-radius: 50%;
-      padding: 4px 8px;
-      font-size: 12px;
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
-
-    .notification-list {
-      position: absolute;
-      top: 100px; /* Adjust the top position to your preference */
-      right: 70px;
-      width: 295px;
-      background-color: white;
-      border: 1px solid #ddd;
-      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-      max-height: 700px;
-      overflow-y: auto;
-      display: none;
-      z-index: 10;
-      margin-top: 45px; /* 헤더의 높이만큼 여백 추가 */
-    }
-    .notification-list-header {
-      background-color: #ccc;
-      padding: 10px;
-      text-align: center;
-      font-weight: bold;
-      position: fixed;
-      top: 100px;
-      width: 13%; /* 가로 너비를 꽉 채우도록 설정 */
-      z-index: 9998; /* 헤더 위에 배치 */
-    }
-    .notification-list-item {
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
-      cursor: pointer;
-      background-color: white;
-    }
-    .notification-list-item.read {
-      background-color: #f0f0f0;
-    }
-
-    /* 하단 게시판 */
-    .bottom {
-      height: 85vh;
-      width: 100%;
-    }
-
-    .bottom-container {
-      height: 100%;
-      padding: 0 200px;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .bottom-top {
-      padding-top: 20px;
-      height: 10%;
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      justify-content: end;
-      align-items: end;
-    }
-
-    .bottom-top-button{
-      width: 30%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: end;
-    }
-
-    .chatuser-btn{
-      display: block;
-      width: 130px;
-      cursor: pointer;
-      padding: 10px 20px;
-      text-align: center;
-      transition: 0.5s;
-      background-size: 200% auto;
-      color: #101014;
-      /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
-      box-shadow: 0 0 20px #eee;
-      border-radius: 10px;
-      background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
-    }
-
-    .chatuser-btn:hover {
-      background-position: right center;
-    }
-
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    a:hover {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    .category-title {
-      font-size: 18px;
-    }
-
-    .list-group-item {
-      background-color: transparent;
-      cursor: pointer;
-    }
-
-    .offcanvas{
-      background-color: #f5f5fa;
-    }
-
-    .mini-list{
-      font-size: 14px;
-      color: #a9a9a9;
-    }
-
-    #selectedResultsModal{
-      margin-top: 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    /* 채팅 리스트 출력 */
-    .bottom-bottom {
-      padding-bottom: 20px;
-      height: 85%;
-      margin-top: 5%;
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-    }
-
-    .chatlists{
-      height: 100%;
-      width: 100%;
-    }
-
-    ol {
-      height: 100%;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      overflow-y: auto;
-    }
-
-    ol::-webkit-scrollbar {
-      margin-left: 5px;
-      width: 7px;
-    }
-
-    ol::-webkit-scrollbar-track {
-      background-color: transparent;
-    }
-
-    ol::-webkit-scrollbar-thumb {
-      border-radius: 2px;
-      background-color: #919191;
-    }
-
-    ol::-webkit-scrollbar-button {
-      width: 0;
-      height: 0;
-    }
-
-    li {
-      width: 100%;
-    }
-
-    .list-number-image {
-      margin-right: 10px;
-      width: 40px;
-      height: 40px;
-    }
-
-    .ms-2{
-      margin-left: 0 !important;
-    }
-
-    .chatitems{
-      display: flex;
-      justify-content: center;
-    }
-
 
   </style>
 
@@ -499,6 +209,18 @@
     $("#searchResults").append(resultItem);
   }
 
+  const Toast = Swal.mixin({
+    toast: true,
+    position: 'center-center',
+    showConfirmButton: false,
+    timer: 1000,
+    timerProgressBar: true,
+    didOpen: (toast) => {
+      toast.addEventListener('mouseenter', Swal.stopTimer)
+      toast.addEventListener('mouseleave', Swal.resumeTimer)
+    }
+  })
+
   const inviteUserBtn = document.getElementById('inviteUsers');
   inviteUserBtn.addEventListener('click', function () {
     console.log(selectedResult.username);
@@ -603,7 +325,10 @@
     };
 
     // 페이지 로드 시 사용자 정보를 가져와서 알림 데이터를 불러옴
-    fetchUserInfo();
+    const token = Cookies.get('Authorization');
+    if (token) { // 토큰 있을 경우
+      fetchUserInfo();
+    }
 
     // 알림 목록 업데이트 함수
     const updateNotificationList = () => {
@@ -723,11 +448,17 @@
       contentType: "application/json",
       success: function (data) {
         console.log(data);
-        alert("로그인 연장 성공");
+        Toast.fire({
+          icon: 'success',
+          title: "로그인 연장 성공",
+        })
       },
       error: function (data) {
         console.log(data);
-        alert("로그인 연장 실패 \n 재로그인 부탁드립니다.");
+        Toast.fire({
+          icon: 'error',
+          title: "로그인 연장 실패. 재로그인 부탁드립니다.",
+        })
         redirectToLoginPage();
       }
     });
@@ -762,12 +493,21 @@
       contentType: "application/json",
       success: function (data) {
         removeToken();
-        alert("로그아웃 성공");
-        window.location.href = "/main";
+        Toast.fire({
+          icon: 'success',
+          title: "로그아웃 성공",
+        }).then(function () {
+          window.location.href = "/main";
+        })
+
       },
       error: function () {
-        alert("로그아웃 실패");
-        window.location.reload();
+        Toast.fire({
+          icon: 'error',
+          title: "로그아웃 실패",
+        }).then(function () {
+          window.location.reload();
+        })
       }
     });
   }
