--- a/src/main/resources/templates/searchedPage.html
+++ b/src/main/resources/templates/searchedPage.html
@@ -28,489 +28,9 @@
   <!-- 로고 -->
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png"/>
 
+  <link rel="stylesheet" type="text/css"  href="/css/searchedPage.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <style>
-    #cardArea {
-      width: 17%;
-      margin: 1%;
-      height: -webkit-fill-available;
-    }
-
-    /* 상단바 css 추가 */
-    @font-face {
-      font-family: 'GangwonState';
-      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
-      font-weight: normal;
-      font-style: normal;
-    }
-
-    * {
-      font-family: 'GangwonState', cursive;
-    }
-
-    html, body {
-      height: 100%;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-      color: #101014;
-      background-color: #f5f5fa;
-      display: flex;
-      flex-direction: column;
-      justify-content: center; /* 가로 가운데 정렬 추가 */
-      align-items: center; /* 세로 가운데 정렬 추가 */
-    }
-
-    /* header 부분 - only 제목 (코끼리) */
-    .header {
-      color: #1a1515;
-      height: 15vh;
-      width: 100%;
-      background-color: transparent;
-      text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    button {
-      background-color: transparent;
-      border: none;
-    }
-
-    .right {
-      height: 100%;
-      width: 35%;
-      padding-left: 30px;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
-
-    .middle {
-      height: 100%;
-      width: 30%;
-      font-size: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #000;
-    }
-
-    .middle img {
-      margin-right: 5px;
-    }
-
-    .left {
-      height: 100%;
-      width: 35%;
-      padding-right: 30px;
-      display: flex;
-      flex-direction: row;
-      justify-content: end;
-      align-items: center;
-    }
-
-
-    /* 알림 */
-    .notification-icon {
-      font-size: 30px;
-      cursor: pointer;
-      margin-right: 10px;
-    }
-
-    .notification-icon div {
-      position: relative;
-    }
-
-    @keyframes shake {
-      0%, 100% {
-        transform: translateX(0);
-      }
-      10%, 30%, 50%, 70%, 90% {
-        transform: translateX(-3px);
-      }
-      20%, 40%, 60%, 80% {
-        transform: translateX(3px);
-      }
-    }
-
-    .list-group-item {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
-
-    .list-group-item span:nth-child(1) {
-      width: 50%;
-    }
-
-    .list-group-item span:nth-child(2) {
-      width: 35%;
-    }
-
-    .new-notification {
-      color: red;
-      animation: shake 1.5s infinite; /* 흔들기 애니메이션 적용 */
-    }
-
-    .nobadge {
-      background-color: red;
-      color: white;
-      border-radius: 50%;
-      padding: 4px 8px;
-      font-size: 12px;
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
-
-    .notification-list {
-      position: absolute;
-      top: 100px; /* Adjust the top position to your preference */
-      right: 70px;
-      width: 295px;
-      background-color: white;
-      border: 1px solid #ddd;
-      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-      max-height: 700px;
-      overflow-y: auto;
-      display: none;
-      z-index: 10;
-      margin-top: 45px; /* 헤더의 높이만큼 여백 추가 */
-    }
-
-    .notification-list-header {
-      background-color: #ccc;
-      padding: 10px;
-      text-align: center;
-      font-weight: bold;
-      position: fixed;
-      top: 100px;
-      width: 13%; /* 가로 너비를 꽉 채우도록 설정 */
-      z-index: 9998; /* 헤더 위에 배치 */
-    }
-
-    .notification-list-item {
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
-      cursor: pointer;
-      background-color: white;
-    }
-
-    .notification-list-item.read {
-      background-color: #f0f0f0;
-    }
-
-    .list-group-item {
-      background-color: transparent;
-      cursor: pointer;
-    }
-
-    .offcanvas {
-      background-color: #f5f5fa;
-    }
-
-    /* bottom 부분 */
-    .bottom {
-      height: 85vh;
-      background-color: transparent;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-    }
-
-    /* bottom one 부분 - 카테고리 text & 게시글 생성 버튼*/
-    .bottomone {
-      height: 15%;
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-    }
-
-    .bottomtwo {
-      height: 70%;
-      width: 80%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .bottomthree {
-      height: 15%;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .bottomonewrapper {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .text-center {
-      font-size: 1.8em;
-      height: 100%;
-      width: 18%;
-      display: flex;
-      justify-content: start;
-      align-items: center;
-    }
-
-    .button-center {
-      width: 20%;
-      height: 100%;
-      display: flex;
-      justify-content: end;
-      align-items: center;
-    }
-
-    .btn-primary {
-      background-color: #e6e6e6;
-    }
-
-    .bottomtwo::-webkit-scrollbar {
-      margin-left: 5px;
-      width: 10px;
-    }
-
-    .bottomtwo::-webkit-scrollbar-track {
-      background-color: transparent;
-    }
-
-    .bottomtwo::-webkit-scrollbar-thumb {
-      border-radius: 2px;
-      background-color: #c4c4c4;
-    }
-
-    .bottomtwo::-webkit-scrollbar-button {
-      width: 0;
-      height: 0;
-    }
-
-    /*bottom3*/
-    nav {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    ul {
-      margin: 0;
-    }
-
-    .pagination {
-      margin-top: 15%;
-      display: flex;
-      flex-wrap: wrap;
-      list-style: none;
-      padding: 0;
-    }
-
-    .custom-pagination .page-item .page-link {
-      cursor: pointer;
-      background-color: #f6f6f6;
-      color: #000;
-      border-color: #d6d6d6;
-    }
-
-    .custom-pagination .page-item .page-link:hover {
-      background-color: #e6e6e6;
-      border-color: #e6e6e6;
-    }
-
-    /*하단 게시판*/
-    .list-group-item {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
-
-    .list-group-item span:nth-child(1) {
-      width: 50%;
-    }
-
-    .list-group-item span:nth-child(2) {
-      width: 35%;
-    }
-
-    .badge-bg-primary-rounded-pill {
-      width: 15%;
-    }
-
-    .bg-primary {
-      background-color: #C8D9EB !important;
-    }
-
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    a:hover {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    .category-title {
-      font-size: 18px;
-    }
-
-    .sidemenu {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .sidemenu div {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-    }
-
-    .list-group-item {
-      background-color: transparent;
-      cursor: pointer;
-    }
-
-    .offcanvas {
-      background-color: #f5f5fa;
-    }
-
-    .mini-list {
-      font-size: 14px;
-      color: #a9a9a9;
-    }
-
-
-    /* 아래는 건욱님 css 코드 */
-    .feature-container {
-      width: 16%;
-      display: flex;
-      flex-direction: column;
-      padding: 20px;
-    }
-
-    .feature {
-      background-color: white;
-      border: 1px solid #ddd;
-      padding: 1px 10px;
-      margin: 0.8em;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      cursor: pointer;
-      font-size: 15px;
-      text-align: center;
-    }
-
-    /* 새로 추가한 스타일 */
-    .user-info-container {
-      box-sizing: unset;
-      display: flex;
-      flex-direction: column; /* 세로 정렬로 변경 */
-      justify-content: flex-start;
-      align-items: center; /* 가로 정렬을 중앙에서 시작하도록 변경 */
-      width: 50%;
-      height: 100vh;
-      background-color: white;
-      border: 1px solid #ddd;
-      margin-left: 10%;
-      padding: 20px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      /*      position: fixed;
-            top: 55%; !* 55%에서 50%로 변경 *!
-            left: 50%;
-            transform: translate(-50%, -50%);*/
-    }
-
-    .user-info {
-      padding: 10px;
-      background-color: #f9f9f9;
-      border: 1px solid #ddd;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      border-radius: 5px;
-      display: flex;
-      align-items: center;
-      margin: 5px 0;
-      width: 90%;
-    }
-
-    /* 수정 및 삭제 버튼 스타일 */
-    .edit-delete-buttons {
-      margin-left: auto; /* 우측으로 정렬 */
-      margin-top: auto;
-      display: flex;
-      flex-direction: row;
-    }
-
-    .edit-delete-buttons button {
-      margin-left: 5px;
-      margin-top: 5px;
-      padding: 5px 15px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    .user-checkbox {
-      margin-right: 10px;
-    }
-
-    .user-info-list {
-      display: flex;
-      flex-direction: column; /* 항목을 수직으로 쌓습니다 */
-      max-height: 90vh; /* 컨텐츠의 최대 높이 설정 */
-      overflow-y: auto; /* 컨텐츠가 넘칠 때 수직 스크롤바를 추가합니다 */
-      gap: 10px;
-      width: 80%;
-      justify-content: flex-start; /* 요소들을 왼쪽 정렬로 유지 */
-      align-items: flex-start; /* 요소들을 위쪽 정렬로 유지 */
-    }
-
-    .mark-all-read-button {
-      position: absolute;
-      top: 10px; /* 버튼 위치 조정 */
-      right: 10px; /* 버튼 위치 조정 */
-      padding: 1px 4px;
-      font-size: 12px;
-      z-index: 9999; /* 다른 요소보다 앞에 표시되도록 설정 */
-    }
-
-    /*!* 각 항목 사이의 위아래 간격을 설정합니다. *!*/
-    /*#post-list ul li {*/
-    /*    margin-top : 50px;*/
-    /*    margin-bottom: 40px;*/
-    /*}*/
-
-    /*!* 제목 스타일을 수정하여 점을 없앱니다. *!*/
-    /*#post-list ul li h2::before {*/
-    /*    content: "제목 : "; !* 제목 앞에 추가할 내용 *!*/
-    /*    font-weight: normal; !* 기본 글꼴 두께로 변경 *!*/
-    /*}*/
-
-    /*!* 카테고리 스타일을 수정하여 점을 없앱니다. *!*/
-    /*#post-list ul li h3::before {*/
-    /*    content: "카테고리 : "; !* 카테고리 앞에 추가할 내용 *!*/
-    /*    font-weight: normal; !* 기본 글꼴 두께로 변경 *!*/
-    /*}*/
-
-    /*!* 작성날짜 스타일을 수정하여 점을 없앱니다. *!*/
-    /*#post-list ul li h5::before {*/
-    /*    content: "작성날짜 : "; !* 작성날짜 앞에 추가할 내용 *!*/
-    /*    font-weight: normal; !* 기본 글꼴 두께로 변경 *!*/
-    /*}*/
-
-
-    h1 {
-      font-size: 35px; /* 원하는 크기로 조정하세요 */
-    }
-
 
   </style>
 </head>
@@ -742,6 +262,17 @@
 </div>-->
 
 <script>
+  const Toast = Swal.mixin({
+    toast: true,
+    position: 'center-center',
+    showConfirmButton: false,
+    timer: 1000,
+    timerProgressBar: true,
+    didOpen: (toast) => {
+      toast.addEventListener('mouseenter', Swal.stopTimer)
+      toast.addEventListener('mouseleave', Swal.resumeTimer)
+    }
+  })
 
   function gotoMain() {
     window.location.href = "/main";
@@ -787,7 +318,6 @@
           updateNotificationList();
           updateNotificationIcon();
         } else {
-          sa
           console.error('Error fetching notifications:', response.status);
         }
       } catch (error) {
@@ -814,7 +344,10 @@
     };
 
     // 페이지 로드 시 사용자 정보를 가져와서 알림 데이터를 불러옴
-    fetchUserInfo();
+    const token = Cookies.get('Authorization');
+    if(token){ // 토큰 있을 경우
+      fetchUserInfo();
+    }
 
     // 알림 목록 업데이트 함수
     const updateNotificationList = () => {
@@ -837,17 +370,15 @@
       // "전체 읽음" 버튼에 이벤트 리스너 연결
       const button = document.getElementById('markAllReadButton');
       button.addEventListener('click', function () {
-        const confirmResult = confirm('알림 전체 읽음처리 하시겠습니까?');
-        if (confirmResult) {
-          // 확인을 선택한 경우 서버에 요청 보내기
-          markAllNotificationsAsRead();
-          // alert('알림이 전체 읽음 처리되었습니다.');
-          window.location.href = window.location.href;
-        } else {
-          // 취소를 선택한 경우
-          // 아무 작업도 하지 않음
-        }
-
+        Swal.fire({
+          icon: "waning",
+          title: "알림 전체 읽음처리 하시겠습니까?"
+        }).then((result) => {
+          if (result.isConfirmed) {
+            markAllNotificationsAsRead();
+            window.location.reload();
+          }
+        })
       });
 
     };
@@ -947,14 +478,18 @@
     // 알림 전체 읽음 처리 함수
     function markAllNotificationsAsRead() {
       $.post(`/api/mark-all-notifications-as-read/${userId}`)
-      .done(function (response) {
-        alert(response); // 성공 메시지 출력
-        // 서버 응답에 따라 적절한 처리를 수행할 수 있습니다.
-        // 예를 들어 알림 목록을 다시 가져와서 업데이트하는 등의 작업을 수행할 수 있습니다.
-      })
-      .fail(function (response) {
-        alert(response); // 오류 메시지 출력
-      });
+              .done(function(response) {
+                Toast.fire({
+                  icon: 'success',
+                  title: "전체 읽음 처리 되었습니다!",
+                })
+              })
+              .fail(function(response) {
+                Toast.fire({
+                  icon: 'error',
+                  title: "전체 읽음 처리 실패!",
+                })
+              });
     }
 
   });
@@ -980,11 +515,17 @@
       contentType: "application/json",
       success: function (data) {
         console.log(data);
-        alert("로그인 연장 성공");
+        Toast.fire({
+          icon: 'success',
+          title: "로그인 연장 성공",
+        })
       },
       error: function (data) {
         console.log(data);
-        alert("로그인 연장 실패 \n 재로그인 부탁드립니다.");
+        Toast.fire({
+          icon: 'error',
+          title: "로그인 연장 실패. 재로그인 부탁드립니다.",
+        })
         redirectToLoginPage();
       }
     });
@@ -1018,12 +559,21 @@
       contentType: "application/json",
       success: function (data) {
         removeToken();
-        alert("로그아웃 성공");
-        window.location.href = "/main";
+        Toast.fire({
+          icon: 'success',
+          title: "로그아웃 성공",
+        }).then(function () {
+          window.location.href = "/main";
+        })
+
       },
       error: function () {
-        alert("로그아웃 실패");
-        window.location.reload();
+        Toast.fire({
+          icon: 'error',
+          title: "로그아웃 실패",
+        }).then(function () {
+          window.location.reload();
+        })
       }
     });
   }
