Revert "[ADD]: 로그아웃 메인화면으로 이동"
This reverts commit 60c725466884e552a14b5b47b51d57709e55b2d3.

--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -1028,7 +1028,7 @@
             success: function (data) {
                 removeToken();
                 alert("로그아웃 성공");
-                window.location.href="/main";
+                window.location.reload();
             },
             error: function () {
                 alert("로그아웃 실패");
